--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,6 +29,10 @@
                       Please enter Address.
                     </div>
                   </div>
+                  <div class="col-md-4">
+                    <label for="email" class="form-label">Enter Email :</label>
+                    <input type="text" class="form-control" id="email" name="email" required>
+                  </div>
                 <div class="col-md-3">
                   <label for="cname" class="form-label">Course Name</label>
                   <select class="form-select" id="cname" name="cname" required>
