--- a/views/display.ejs
+++ b/views/display.ejs
@@ -20,6 +20,7 @@
                 <p><span class="heading">Name: </span><%= student.name %></p>
                 <p><span class="heading">Roll No: </span><%= student.rollno %></p>
                 <p><span class="heading">Address: </span><%= student.address %></p>
+                <p><span class="heading">Email: </span><%= student.email %></p>
                 <p><span class="heading">Course Name: </span><%= student.courseName %></p>
             </div>
         <% } %>
